--- a/ndtp-user/src/main/webapp/css/ko/user-style.css
+++ b/ndtp-user/src/main/webapp/css/ko/user-style.css
@@ -187,7 +187,7 @@ background-position: -445px 10px;
 ul.nav li.data {
 background-position: -445px -90px;
 }
-ul.nav li.convert {
+ul.nav li.converter {
 background-position: -445px -190px;
 }
 ul.nav li.spatial {
