--- a/ndtp-user/src/main/webapp/css/ko/style.css
+++ b/ndtp-user/src/main/webapp/css/ko/style.css
@@ -1,14 +1,25 @@
+@charset "utf-8";
+
 /* Typo
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
-html {
-	font-size: 62.5%; }
-	
+/*user-style css 때문에 important로 적용 */
+/* * { margin:0; padding:0; outline:0; vertical-align:middle !important; } */
+
 body {
 	font-size: 1.3em; /* currently ems cause chrome bug misinterpreting rems on body element */
 	line-height: 1.6;
 	font-weight: 400; /* Regular 300~500, Bold 600~700, Extra Bold 800~900 */
 	font-family: 'Nanum Gothic', sans-serif;
 	color: #888; }
+html {
+	font-size: 62.5%; }
+	
+/* body { */
+/* 	font-size: 1.3em; currently ems cause chrome bug misinterpreting rems on body element */
+/* 	line-height: 1.6; */
+/* 	font-weight: 400; Regular 300~500, Bold 600~700, Extra Bold 800~900 */
+/* 	font-family: 'Nanum Gothic', sans-serif; */
+/* 	color: #888; } */
 	
 p {
 	margin: 0; }
@@ -23,12 +34,12 @@ input, select, textarea, button,
 	font-size: 1.3rem;
 	color: #7d7d7d; }
 
-h1, h2, h3, h4, h5, h6 {
-	margin: 0;
-	font-weight: 700;
-	color: #34373d; }
+/* h1, h2, h3, h4, h5, h6 { */
+/* 	margin: 0; */
+/* 	font-weight: 700; */
+/* 	color: #34373d; } */
 	
-h1 { font-size: 4.0rem; line-height: 1.2;  letter-spacing: -.1rem;}
+/* h1 { font-size: 4.0rem; line-height: 1.2;  letter-spacing: -.1rem;} */
 h2 { font-size: 3.6rem; line-height: 1.25; letter-spacing: -.1rem; }
 h3 { font-size: 3.0rem; line-height: 1.3;  letter-spacing: -.1rem; }
 h4 { font-size: 2.4rem; line-height: 1.35; letter-spacing: -.08rem; }
@@ -914,8 +925,8 @@ select + .ui-selectmenu-button + input {
   float: right; }
 .u-pull-left {
   float: left; }
-.on {
-	color: #06b20e !important; }
+/* .on { */
+/* 	color: #06b20e !important; } */
 .off {
 	color: #bf3000 !important; }
 .color-cyan {
@@ -950,8 +961,8 @@ hr {
 ol, ul, dl, li, dt, dd {
 	margin: 0;
 	padding: 0; }
-ul {
-	list-style: disc inside; }
+/* ul { */
+/* 	list-style: disc inside; } */
 ol {
 	list-style: decimal inside; }
 dl {
@@ -1378,7 +1389,7 @@ table + .pagination {
 	margin-top: 20px; }
 	
 .tabs {
-	margin-top: 20px; }
+	margin-top: 10px; }
 
 .inner-table + .input-header {
 	margin-top: 20px; }
@@ -1528,6 +1539,7 @@ tr:hover td {
 .list-table th {
 	font-size: 1.3rem;
 	font-weight: normal;
+	vertical-align:middle;
 	color: #000;
 	border: 1px solid #d9d9d9;
 	border-top: 2px solid #3b095e;
@@ -1538,6 +1550,7 @@ tr:hover td {
 
 .list-table td {
 	font-size: 1.3rem;
+	vertical-align:middle;
 	border: 1px solid #d9d9d9;
 	height: 33px;
 	padding-left: 10px;
@@ -1866,8 +1879,8 @@ tr:hover td {
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 .filters {
 	border: 1px solid #d5d5d5;
-	border-top-width: 5px;
-	border-bottom-width: 2px;
+/* 	border-top-width: 5px; */
+/* 	border-bottom-width: 2px; */
 	padding: 15px 20px; }
 	
 
@@ -2549,4 +2562,55 @@ tr:hover td {
 	margin-top: -.8em;
 	text-align: center;
 	line-height: 1.6em;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*****************************************************************************************************/
+.tab {
+height: 31px;
+margin: 0;
+min-width: 325px;
+}
+.tab li {
+display: inline-block;
+width: 110px;
+padding: 5px 0px;
+color: #000;
+cursor: pointer;
+border: 1px solid #d9d9d9;
+border-bottom: 1px solid #ececec;
+border-radius: 3px 3px 0 0;
+background-color: #fff;
+text-align: center;
+}
+.tab li.on {
+color: #fff;
+border: 1px solid #006bd2;
+background-color: #0073e2;
+} 
+.input-set {
+margin: 10px 20px 10px 10px;
+float: left; 
 }
