- 공간분석 1차완료. - 배마스터가 주신 워드 문서 참조하여 geoserver 세팅 후 SpatialAnalysis.js 상단에 WPS_URL 변수에 wps 접근 url 변경

--- a/ndtp-user/src/main/webapp/css/ko/user-style.css
+++ b/ndtp-user/src/main/webapp/css/ko/user-style.css
@@ -1050,3 +1050,31 @@ border: none;
 text-indent: -999em;
 background-position: -132px -299px;
 }
+
+/* 연직분석 그래프 */
+.analysisGraphic {
+position: absolute;
+bottom: 20px;
+left: 460px;
+right: 0;
+height: 200px;
+padding: 20px;
+margin: 10px;
+background-color: #fff;
+z-index: 9;
+display: none;
+}
+.analysisGraphic canvas {
+border: 1px dotted red;
+}
+
+.analysisGraphic div.closeGraphic {
+position: absolute;
+top: 0px;
+left: 2px;
+font-weight: 900;
+font: #f00;
+color: red;
+font-size: 16px;
+cursor: pointer;	
+}
