--- a/ndtp-user/src/main/webapp/css/ko/user-style.css
+++ b/ndtp-user/src/main/webapp/css/ko/user-style.css
@@ -393,6 +393,40 @@ background-color: #287be4;
 color: #287be4;
 }
 
+/* /// 데이터 그룹 summary /// */
+.dataGroupSummary {
+	position: relative;
+}
+.dataGroupSummary > table {
+	width: 100%;
+}
+.dataGroupSummary > table thead th {
+	padding: 5px;	
+	border: 1px solid #ccc;
+}
+.dataGroupSummary > table tbody tr:hover {
+	cursor: pointer;
+	background-color: #f9f9f9;
+}
+.dataGroupSummary > table tbody tr.selected {
+	background-color: #d6dcf2;
+}
+.dataGroupSummary > table tr td {
+	padding: 7px 5px;
+	border: 1px solid #ccc;
+	font-size: 14px;
+	text-align: center;
+}
+.dataGroupSummary > table tr td a {
+	border-bottom: 1px solid #000;
+}
+.dataGroupSummary > table tr td.alignLeft {
+	text-align: left;
+}
+.dataGroupSummary > table tr td.center {
+	text-align: center;
+}
+
 /* /// 데이터 게시판 목록 /// */
 .tableList {
 position: relative;
