--- a/ndtp-user/src/main/webapp/css/ko/user-style.css
+++ b/ndtp-user/src/main/webapp/css/ko/user-style.css
@@ -1348,40 +1348,40 @@ background-color: #555;
 }
 
 /* /// 기본 테이블 /// */
-.tableTemplate {
+.basicTable {
 	position: relative;
 }
-.tableTemplate > table {
+.basicTable > table {
 	width: 100%;
 }
-.tableTemplate > table thead th {
+.basicTable > table thead th {
 	padding: 5px;	
 	border: 1px solid #ccc;
 }
-.tableTemplate > table tbody tr:hover {
+.basicTable > table tbody tr:hover {
 	cursor: pointer;
 	background-color: #f9f9f9;
 }
-.tableTemplate > table tbody tr.selected {
+.basicTable > table tbody tr.selected {
 	background-color: #d6dcf2;
 }
-.tableTemplate > table th {
+.basicTable > table th {
 	padding: 5px;	
 	border: 1px solid #ccc;
 	background-color: #ddd;
 }
-.tableTemplate > table tr td {
+.basicTable > table tr td {
 	padding: 7px 5px;
 	border: 1px solid #ccc;
 	font-size: 14px;
 	text-align: left;
 }
-.tableTemplate > table tr td a {
+.basicTable > table tr td a {
 	border-bottom: 1px solid #000;
 }
-.tableTemplate > table tr td.alignLeft {
+.basicTable > table tr td.alignLeft {
 	text-align: left;
 }
-.tableTemplate > table tr td.center {
+.basicTable > table tr td.center {
 	text-align: center;
 }
