--- a/ndtp-user/src/main/webapp/css/ko/user-style.css
+++ b/ndtp-user/src/main/webapp/css/ko/user-style.css
@@ -1263,6 +1263,18 @@ margin-left: 10px;
 margin-top: 20px;
 }
 
+.dataControlLayer{
+z-index: 10;
+position: absolute;
+right: 10px;
+bottom: 10px;
+width: 400px;
+height: 500px;
+background-color: beige;
+border-radius: 20px;
+display:none;
+}
+
 /* 레이어스타일 */
 ul.layerList > li {
 margin-bottom: 10px;
