--- a/ndtp-user/src/main/webapp/externlib/kotSlider/range.css
+++ b/ndtp-user/src/main/webapp/externlib/kotSlider/range.css
@@ -5,7 +5,7 @@
 input[type=range] {
   -webkit-appearance: none;
   margin: 0 0;
-  width: 100%;
+  width: 95%;
 }
 input[type=range]:focus {
   outline: none;
@@ -114,7 +114,7 @@ body {
 div.rangeWrap {
 background:rgba(0,0,0,0.9);
 width: 100%;
-
+height:50px;
 }
 .start {
 width: 30px;
@@ -156,4 +156,15 @@ background: url(./images/slide.png) no-repeat -90px 0;
 }
 .rangeWrapChild.button{
   width: 15%;
+}
+.rangeWrapChild.legend{
+width: 865px;
+height: 20px;
+float: right;
+}
+.rangeWrapChild.legend span{
+color: white;
+font-weight: bold;
+margin-left: 107px;
+cursor: pointer;
 }
