--- a/ndtp-user/src/main/webapp/css/ko/user-style.css
+++ b/ndtp-user/src/main/webapp/css/ko/user-style.css
@@ -945,14 +945,14 @@ overflow-y: auto;
 }
 
 .sliderWrap {
-	position: absolute;
-	bottom: 20px;
-	left: 710px;
-	right: 0;
-	background-color: #fff;
-	z-index: 9;
-	display: none;
-	width:900px;
+position: absolute;
+bottom: 20px;
+left: 580px;
+right: 0;
+background-color: #fff;
+z-index: 9;
+display: none;
+width:900px;
 }
 
 /*========================================== temp css =========================================================*/
@@ -1223,9 +1223,8 @@ border: 1px solid #333446;
 position: absolute;
 top:60px;
 right: 5px;
-width: 200px;
-height: 333px;
-min-width: 150px;
+min-width: 200px;
+min-height: 333px;
 border-radius: 5px;
 box-shadow: 1px 1px 2px 0 #333;
 background-color: #fff;
@@ -1262,17 +1261,20 @@ margin-bottom: 10px;
 margin-left: 10px;
 margin-top: 20px;
 }
-
-.dataControlLayer{
-z-index: 10;
-position: absolute;
-right: 10px;
-bottom: 10px;
-width: 400px;
-height: 500px;
-background-color: beige;
-border-radius: 20px;
-display:none;
+.labelLayer div.layerContents > div {
+margin: 20px 0 10px 0;
+}
+.labelLayer div.layerContents > div label {
+display: inline-block;
+width: 69px;
+}
+.labelLayer div.layerContents > div h3{
+margin-bottom:10px;
+}
+.labelLayer div.layerContents > div ul.category {
+list-style: circle;
+margin-bottom: 10px;
+margin-left: 10px;
 }
 
 /* 레이어스타일 */
