--- a/ndtp-user/src/main/webapp/css/ko/user-style.css
+++ b/ndtp-user/src/main/webapp/css/ko/user-style.css
@@ -1413,3 +1413,66 @@ background-color: #fff;
 .basicTable > table tr td.center {
 	text-align: center;
 }
+/* 레이어 스타일 추가 */
+.layerDiv h4 {
+padding: 0 0 0 12px;
+font-size: 15px;
+margin-bottom: 10px;
+background: url(/images/ko/ico.png) no-repeat left -815px;
+}
+.layerDiv li > label {
+display: inline-block;
+padding-left: 10px;
+font-size: 13px;
+font-weight: bold;
+background: url(/images/ko/ico.png) no-repeat left -865px;	
+}
+.layerDiv {
+margin-bottom: 25px;
+}
+.layerDiv li {
+margin-bottom: 10px;
+}
+.layerDiv li * {
+vertical-align: middle;
+}
+.layerDivTit {
+margin-bottom: 10px;
+padding: 7px;
+color: #fff;
+border-radius: 5px;
+background-color: #444a61;
+}
+.layerDivTit > span {
+color: #fff;
+font-size: 16px;
+font-weight: bold;
+}
+.layerDiv label {
+display: inline-block;
+width: 70px;
+}
+.layerDiv input  {
+padding: 5px;
+}
+.layerDiv li > button {
+width: 30px;
+height: 30px;
+text-indent: -999em;
+border: 1px solid #ccc;
+background-image: url(/images/ko/ico.png);
+background-repeat: no-repeat;
+background-color: #fff;
+}
+button.up {
+background-position: -112px -195px;
+}
+button.down {
+background-position: -162px -195px;
+}
+button.rangePrev {
+background-position: -212px -193px;
+}
+button.rangeNext {
+background-position: -262px -193px;
+}
