--- a/ndtp-user/src/main/webapp/css/ko/user-style.css
+++ b/ndtp-user/src/main/webapp/css/ko/user-style.css
@@ -1417,7 +1417,7 @@ background-color: #fff;
 .layerDiv h4 {
 padding: 0 0 0 12px;
 font-size: 15px;
-margin-bottom: 10px;
+margin-bottom: 7px;
 background: url(/images/ko/ico.png) no-repeat left -815px;
 }
 .layerDiv li > label {
@@ -1425,10 +1425,10 @@ display: inline-block;
 padding-left: 10px;
 font-size: 13px;
 font-weight: bold;
-background: url(/images/ko/ico.png) no-repeat left -865px;	
+background: url(/images/ko/ico.png) no-repeat left -865px;   
 }
 .layerDiv {
-margin-bottom: 25px;
+margin-bottom: 20px;
 }
 .layerDiv li {
 margin-bottom: 10px;
@@ -1453,9 +1453,9 @@ display: inline-block;
 width: 70px;
 }
 .layerDiv input  {
-padding: 5px;
+padding: 3px;
 }
-.layerDiv li > button {
+.layerDiv li > button:not(.btnTextF):not(.btnText) {
 width: 30px;
 height: 30px;
 text-indent: -999em;
@@ -1464,6 +1464,7 @@ background-image: url(/images/ko/ico.png);
 background-repeat: no-repeat;
 background-color: #fff;
 }
+
 button.up {
 background-position: -112px -195px;
 }
