사용자 - 레이어 그룹명이 긴 경우 말줄임 표시

--- a/ndtp-user/src/main/webapp/css/ko/user-style.css
+++ b/ndtp-user/src/main/webapp/css/ko/user-style.css
@@ -1477,3 +1477,8 @@ background-position: -212px -193px;
 button.rangeNext {
 background-position: -262px -193px;
 }
+
+.ellipsis {
+	overflow:hidden;
+	white-space: nowrap;
+	text-overflow: ellipsis; }
